--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ServeAuto SmartCount 1.0</title>
+    <title>ServeAuto SmartCount</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2">
@@ -28,8 +28,12 @@
         header { background-color: var(--primary); color: white; padding: 1rem; text-align: center; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 10px rgba(0,0,0,.1); }
         .header-content { display: flex; flex-direction: column; align-items: center; }
         .app-title { font-size: 1.5rem; font-weight: bold; margin-bottom: .5rem; }
+        .brand-serveauto { background-color: #ffffff; color: var(--danger); font-weight: 700; padding: 0.1rem 0.4rem; border-radius: 0.25rem; letter-spacing: 0.5px; }
+        .brand-smartcount { background-color: var(--light); color: var(--dark); font-weight: 600; padding: 0.1rem 0.4rem; border-radius: 0.25rem; margin-left: 0.25rem; }
         .app-version { font-size: .8rem; opacity: .9; }
         .user-info { margin-top: 0.5rem; font-size: 0.9rem; }
+        .user-info .company-pill { background-color: var(--light); color: var(--primary); font-weight: 600; padding: 0.1rem 0.4rem; border-radius: 0.25rem; }
+        .user-info .user-pill { background-color: var(--light); color: var(--dark); font-weight: 600; padding: 0.1rem 0.4rem; border-radius: 0.25rem; }
         .nav-tabs { display: flex; background-color: var(--primary); overflow-x: auto; padding: 0 .5rem; scrollbar-width: none; position: sticky; top: 84px; z-index: 99; }
         .nav-tabs::-webkit-scrollbar { display: none; }
         .tab { padding: .8rem 1rem; color: rgba(255,255,255,.7); text-align: center; text-decoration: none; white-space: nowrap; border-bottom: 3px solid transparent; cursor: pointer; font-weight: 500; }
@@ -408,7 +412,7 @@
     <div id="app">
         <header>
             <div class="header-content">
-                <div class="app-title">ServeAuto SmartCount</div>
+                <div class="app-title"><span class="brand-serveauto">SERVEAUTO</span> <span class="brand-smartcount">SmartCount</span></div>
                 <div id="user-info" class="user-info hidden"></div>
             </div>
         </header>
@@ -517,7 +521,7 @@
             </div>
         </div>
 
-        <div class="footer">ServeAuto SmartCount 1.0 &copy; 2025 - Contagem Inteligente de Estoque</div>
+        <div class="footer">ServeAuto SmartCount &copy; 2026 - Contagem Inteligente de Estoque</div>
     </div>
 
     <script>
@@ -597,7 +601,7 @@
             if (currentCompany && currentUser) {
                 const companyName = currentCompany.nome || currentCompany.email || 'Empresa';
                 const userName = currentUser.nome || currentUser.email || 'Usuário';
-                userInfoElement.textContent = `Empresa: ${companyName} • Usuário: ${userName}`;
+                userInfoElement.innerHTML = `Empresa: <span class="company-pill">${companyName}</span> • Usuário: <span class="user-pill">${userName}</span>`;
                 userInfoElement.classList.remove('hidden');
             }
         }
